# generic-client

./: .gitignore  Cargo.toml  Justfile  README.md  cbindgen.toml  config.toml.example  mpclipboard-generic-client.h
.github/workflows/: aarch64-macos.yml  build-macos.yml  release.yml  x86_64-linux.yml
examples/: cli.c  cli.rs  shared-client-example-c.c
scripts/: pack-rustls-platform-verifier-android.sh
src/: clip.rs  command.rs  config.rs  connection.rs  event.rs  ffi.rs  handle.rs  incoming_tx.rs  lib.rs  logger.rs  main_loop.rs  outcoming_rx.rs  output.rs  runtime.rs  store.rs  thread.rs  tls.rs  websocket.rs
src/websocket/: mapped.rs  message.rs  mod.rs  reconnecting.rs  retry.rs  with_ssl.rs
