[package]
name = "shared-clipboard-client-generic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
native-tls = ["tokio-websockets/native-tls", "dep:tokio-native-tls"]
rustls-platform-verifier = [
    "tokio-websockets/rustls-webpki-roots",
    "dep:rustls-platform-verifier",
    "dep:rustls",
    "dep:tokio-rustls",
]

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

log = { version = "0.4", default-features = false }

shared-clipboard-common = { git = "https://github.com/iliabylich/shared-clipboard-common.git" }

http = { version = "1.3", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "time",
    "rt",
    "macros",
] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }

tokio-websockets = { version = "0.11", features = [
    "ring",
    "client",
    "fastrand",
] }

# native-tls
tokio-native-tls = { version = "0.3", default-features = false, optional = true }

# rustls-platform-verifier
rustls-platform-verifier = { version = "0.6", optional = true }
rustls = { version = "0.23.27", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26.2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = { version = "0.21", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
pretty_env_logger = { version = "0.5", default-features = false }
