[package]
name = "mpclipboard-generic-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
log = "0.4"
http = "1.3"
tokio = { version = "1", features = ["time", "rt", "macros", "fs"] }
futures = "0.3"
tokio-websockets = { version = "0.12", features = [
    "ring",
    "client",
    "fastrand",
    "rustls-webpki-roots",
] }
rustls-platform-verifier = "0.6"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
http-serde = "2.1"
tokio-util = "0.7"
# libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = { version = "0.21", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
pretty_env_logger = { version = "0.5", default-features = false }

# [[example]]
# name = "cli"
# required-features = ["libc"]
